@@ -5,16 +5,16 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'github-pages'
 ext {
-    privateRepo = 'http://115.29.40.120:8181/nexus/content/groups/ailk'
-    privateDeployRepo = 'http://115.29.40.120:8181/nexus/content/repositories/ailk-releases'
+    privateRepo = 'http://210.14.153.178:8081/nexus/content/groups/ailk'
+    privateDeployRepo = 'http://210.14.153.178:8081/nexus/content/repositories/ailk-releases'
     deploy_username = System.getProperty('DEPLOY_USERNAME')
     deploy_password = System.getProperty('DEPLOY_PASSWORD')
-    oc_version = 'och3.3.0'
-    zookeeper_version = '3.4.5-cdh5.1.3'
-    hadoop_common_version = '2.3.0-cdh5.1.3'
+    oc_version = 'och4.0.0'
+    zookeeper_version = '3.4.5-cdh5.2.1'
+    hadoop_common_version = '2.5.0-cdh5.2.1'
     hbase_version = '0.98.6.1' 
-    hive_version = '0.13.0'
-    apache_spark_version = "1.1.0" 
+    hive_version = '0.13.1-cdh5.2.1'
+    apache_spark_version = "1.1.0-cdh5.2.1" 
 }
 
 repositories {
@@ -30,7 +30,7 @@ dependencies {
 
 def getFromMaven(src, destDir) {
     s = src.split("[:@]")
-    srcUrl = "http://10.1.253.223:8081/nexus/service/local/artifact/maven/redirect?r=ailk&g=${s[0]}&a=${s[1]}&v=${s[2]}&e=${s[3]}"
+    srcUrl = "http://210.14.153.178:8081/nexus/service/local/artifact/maven/redirect?r=ailk&g=${s[0]}&a=${s[1]}&v=${s[2]}&e=${s[3]}"
     ant.echo("downloading:$srcUrl to:$destDir/${s[1]}-${s[2]}.${s[3]}")
     ant.mkdir(dir: destDir)
     ant.get(src: srcUrl, dest: "$destDir/${s[1]}-${s[2]}.${s[3]}", verbose: true)
@@ -156,7 +156,33 @@ task apache_spark() {
     }
 }
 
-task all(dependsOn: [zookeeper, hadoop_common, hbase, hive, apache_spark]) {
+task spark() {
+    doLast() {
+        project.exec {
+            workingDir 'spark'
+//            commandLine "mvn -Dcdh.hadoop.version=$hadoop_common_version -Dcdh.protobuf.version=2.5.0 -Dcdh.hbase.version=$hbase_version clean install"
+//            commandLine "mvn -e -Pyarn -Phive -Dhadoop.version=$hadoop_common_version -Dyarn.version=$hadoop_common_version -DskipTests clean install".split().toList()
+            commandLine "sh make-distribution.sh --tgz --skip-java-test  -Pyarn -Phive -Phadoop-2.3 -Dhadoop.version=$hadoop_common_version -Dyarn.version=$hadoop_common_version -DskipTests ".split().toList()
+            environment MAVEN_OPTS: "-Xmx4g -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512m"
+            environment SCALA_HOME: "/home/jenkins/app/scala-2.10.3"
+        }
+        ant.move(file: "spark/spark-${apache_spark_version}-bin-${hadoop_common_version}.tgz", tofile: "build/ochadoop/spark-${apache_spark_version}-${hadoop_common_version}.tar.gz")
+    }
+}
+
+task asiainfo-spark() {
+    doLast() {
+        project.exec {
+            workingDir 'asiainfo-spark'
+            commandLine "sh make-distribution.sh --tgz --skip-java-test  -Pyarn -Phive -Phadoop-2.3 -Dhadoop.version=$hadoop_common_version -Dyarn.version=$hadoop_common_version -DskipTests ".split().toList()
+            environment MAVEN_OPTS: "-Xmx4g -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512m"
+            environment SCALA_HOME: "/home/jenkins/app/scala-2.10.3"
+        }
+        ant.move(file: "asiainfo-spark/spark-${apache_spark_version}-bin-${hadoop_common_version}.tgz", tofile: "build/ochadoop/spark-${apache_spark_version}-${hadoop_common_version}.tar.gz")
+    }
+}
+
+task all(dependsOn: [zookeeper, hadoop_common, hbase, hive]) {
     doLast {
         ant.mkdir(dir: "build/tar/ochadoop-${oc_version}")
         ant.move(file: "build/ochadoop", tofile: "build/tar/ochadoop-${oc_version}/ochadoop-${oc_version}")
